skip=69; fail=7